test/classes/initializers/phase2/parentAccess.good
parentAccess.chpl:7: error: Cannot access parent field 'f1' during phase 1
